# spectral-scaling-laws

./: .gitignore  CITATION.cff  LICENSE  Makefile  NOTICE.md  README.md  environment.yml  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements-metrics.txt  requirements-train.txt  requirements.txt  train.py
assets/: README.md
configs/: README.md
data/: README.md
docs/: README.md  adding_new_optimizer.md  analysis_inventory.md  citation.md  compute_budget.md  data.md  diagnostic_api.md  experiments.md  faq.md  getting_started.md  log_schema.md  method.md  metrics.md  optimizer_hyperparameters.md  optimizer_implementations.md  optimizers.md  paper_summary.md  release_audit.md  repo_map.md  reproducibility.md  reproduction.md  results_format.md  training.md  troubleshooting.md
examples/: README.md  probe_synthetic_activations.py  probe_your_model.py
notebooks/: README.md  reproduce_main_figures.ipynb
optimizer_ssl/: __init__.py  probe.py
results/: README.md  external_artifacts.md  figure_manifest.csv
scripts/: README.md
tests/: test_analysis_scripts.py  test_binary_shards.py  test_config_loading.py  test_effective_rank.py  test_eigen_log_parser.py  test_final_polish.py  test_frequency_bucket_reduction.py  test_log_schema.py  test_metric_names.py  test_optimizer_registry.py  test_power_law_fit.py  test_probe_api.py  test_processed_artifacts_and_figures.py  test_project_metadata.py  test_rank_aggregation.py  test_reproducibility_hardening.py  test_spectra_metric_equivalence.py  test_token_frequency_buckets.py  test_training_modules.py
(+320 files in other folders)
